2001-08-19  Tige Chastain (tigechastain@home.com)

	* favorites.c: Added checking to empty hidden processes window.

2001-08-19  Kevin Vandersloot <kfv101@psu.edu>

	* util.c: call fork before execlp so the procman doesn't quit
	when you kill the process

2001-08-19  Kevin Vandersloot <kfv101@psu.edu>

	* util.c: new misc file. Contains the exec as root stuff for
	now

	* procactions.c: do the root dialog on kill if permission denied.
	Update some strings

	* procdialogs.c (create_root_password_dialog): new dialog to
	get the root password

2001-08-18  Tige Chastain <tigechastain@home.com>

	* procactions.c: provide feedback when renice and kill don't
	work.

2001-08-18  Kevin Vandersloot <kfv101@psu.edu>

	* load-graph.c (load_graph_draw): put a g_return_val_if_fail
	on the main window to deal with a crash on exit.
	Slow the update down for a better display. Need to not hardcode
	these values.

	* interface.c: some update of the labels.

	* callbacks.c: end the timers on exit. The load_graph_draw
	is still being called even after the window has been 
	destroyed.

2001-08-18  Kevin Vandersloot <kfv101@psu.edu>

	* callbcaks.c: remove cb_progress_meter... Force a graph update
	upon a tab switch.

	* interface.c: update some of the labels for the cpu and mem
	graphs. Also don't show a disk if it has zero size - seems to 
	do the work of not showing /proc etc.

	* load-graph.c (load_graph_draw): not static anymore so the 
	graph can be drawn in callbacks.c. Set the graph width and height
	here so we are always guarenteed the allocation->[height,width] are
	correct. 
	(get_memory): put in the memory values for the labels

	* proctable.c: add a FIXME and remove the progress meter stuff.

2001-08-17  Kevin Vandersloot <kfv101@psu.edu>

	* interface.c (get_size_string): display the disk space sizes nicer.

	* callbacks.c: remove some debugging stuff.

	* load-graph.c: draw a coordinate axis

2001-08-17  Kevin Vandersloot <kfv101@psu.edu>
